# Express/express.js
@@ -2,14 +2,17 @@ import express from 'express';
 import swaggerUi from 'swagger-ui-express';
 import swaggerDocument from './swagger.json' assert { type: 'json' };
 import usuariosRoutes from './routes/usuarios.js';
+import rolesRoutes from './routes/roles.js';
 
 const app = express();
 app.use(express.json());
 
 app.use('/usuarios', usuariosRoutes); 
+app.use('/roles', rolesRoutes);
+
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
 app.listen(3000, () => {
-    console.log('Server is listening on http://localhost:3000');
-    console.log('Swagger docs available at http://localhost:3000/api-docs');
+    console.log('Server ==> http://localhost:3000');
+    console.log('Swagger ==> http://localhost:3000/api-docs');
 });
