# Express/routes/usuarios.js
@@ -9,5 +9,6 @@ router.get('/', UserController.listUsers);
 router.get('/:id', UserController.findUserById);
 router.put('/:id', UserController.updateUser);
 router.delete('/:id', UserController.deleteUser);
+router.put('/:id/roles/:roleName', UserController.addRoleToUser);
 
 export default router;
