# Express/swagger.json
@@ -254,6 +254,109 @@
                     }
                 }
             }
+        },
+        "/roles": {
+            "post": {
+                "summary": "Criar nova role",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "name": {
+                                        "type": "string",
+                                        "example": "ADMIN"
+                                    },
+                                    "description": {
+                                        "type": "string",
+                                        "example": "Administrador"
+                                    }
+                                },
+                                "required": [
+                                    "name"
+                                ]
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Role criada com sucesso"
+                    },
+                    "400": {
+                        "description": "Nome é obrigatório"
+                    }
+                }
+            },
+            "get": {
+                "summary": "Lista de tdas as roles",
+                "responses": {
+                    "200": {
+                        "description": "Lista de todas as roles",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "type": "object",
+                                        "properties": {
+                                            "id": {
+                                                "type": "integer",
+                                                "example": 1
+                                            },
+                                            "name": {
+                                                "type": "string",
+                                                "example": "ADMIN"
+                                            },
+                                            "description": {
+                                                "type": "string",
+                                                "example": "Administrador"
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/usuarios/{id}/roles/{roleName}": {
+            "put": {
+                "summary": "Atribuir role a um usuário",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "example": 1
+                        },
+                        "description": "ID do usuário"
+                    },
+                    {
+                        "name": "roleName",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "example": "ADMIN"
+                        },
+                        "description": "Nome da role a ser atribuído"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Role atribuído com sucesso"
+                    },
+                    "404": {
+                        "description": "Usuário ou role não encontrado"
+                    }
+                }
+            }
         }
     }
 }
